Quality Assurance Data Analyst - Bossanova Robotics - Career Page. TrendKite/Cision - Data Quality Analyst. Cision EMIA Careers - Data Analyst. Data Analyst - TIAA Careers. Data Analyst  I - PRO Unlimited @ Facebook - Career Page. Hugo & Cat Limited - Jobs: Data and SEO Analyst (Contract / Contract to Perm) - Apply online. Hobsons Careers - Senior Sales Operations Data Analyst. Veristat Careers - Manager, Statistical Programming. The Shade Store Careers - Business and Data Analyst. Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters. Valley Health Careers - Clinical Data Analyst. IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters. Principal Biostatistician - Syneos Health Careers. Principal Biostatistician - Syneos Health Careers. Sr Statistical Programmer - Syneos Health Careers. Medidata Solutions Careers - Sales Compensation Analyst. Pilmico Foods Corporation Digital Data Analyst | SmartRecruiters. Marketplace Data Analyst - ZALORA SEA - Career Page. Strategic Insight Junior Data Analyst | SmartRecruiters. Principal Biostatistician - PPD Careers. Massive Insights Statistician | SmartRecruiters. Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page. Progressive technology solutions Data Analyst | SmartRecruiters. Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers. Premise Health Careers - Member Health Management Data Analyst. Premier Research Careers - Senior Biostatistician. Premier Research Careers - Principal Biostatistical Programmer. Sr Statistical Programmer - Syneos Health Careers. Sr. Data Insights Analyst. Data Integration and Design Analyst. The Climate Corporation Careers - Data Scientist - Statistics. Data Analyst - Apply online - 605 - Jobs. Marketing Acquistion Data Analyst - Apply online - BDSwiss - Jobs. Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs. Marketing Data Analyst - Apply online

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/eSwuAmR3xV/Quality-Assurance-Data-Analyst'>Quality Assurance Data Analyst - Bossanova Robotics - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/trendkite/f1244924-b9d1-42e7-b8a9-05b1b69611b3'>TrendKite/Cision - Data Quality Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -59,7 +63,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/USToYytts1/Data-Analyst-I'>Data Analyst  I - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/USToYytts1/Data-Analyst-I'>Data Analyst  I - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -99,7 +103,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -139,7 +143,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -166,7 +170,7 @@ digital experiences is what Adobe's all about. We give everyone?from emerging
 <p>Jul 18, 2019 ... Data Integration and Design Analyst. Key Role: As a key member of the financial 
 planning and analysis (FP&A) integrated analytics team, maintain responsibility?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oEmCafww'>The Climate Corporation Careers - Data Scientist - Statistics</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oEmCafww'>The Climate Corporation Careers - Data Scientist - Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -212,7 +216,7 @@ hire, you'll be responsible for data needs throughout the organization. You'll b
 Automate quarterly insights across native / partner channels for external facing 
 analyst?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Path Forward Return to Work program at Cloudflare is a 16 week paid 
 returnship for experienced professionals returning to the workforce after taking 
@@ -230,7 +234,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/bio-statistical-research-consultant-aAFeJiRVar6yZPaKld2Sj6'>Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/bio-statistical-research-consultant-aAFeJiRVar6yZPaKld2Sj6'>Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -242,7 +246,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/revance/job/oFgmafwb'>Revance Therapeutics, Inc. Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/revance/job/oFgmafwb'>Revance Therapeutics, Inc. Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Essential Functions: Provide expertise and guidance to the Clinical Development 
 team regarding statistical methods for data analysis of clinical trials. Provide?...</p>
@@ -299,7 +303,7 @@ American?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KGSTechnologyGroupInc/743999692257817-entry-level-data-analyst'>KGS Technology Group Inc Entry Level Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -316,7 +320,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clearwateranalytics/jobs/4369496002'>Job Application for Inbound Data Analyst at Clearwater Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clearwateranalytics/jobs/4369496002'>Job Application for Inbound Data Analyst at Clearwater Analytics</a></h5> 
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -332,7 +336,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692250175-data-analyst-senior-insight-analytics'>Numberly Data Analyst Senior - Insight & Analytics | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692250175-data-analyst-senior-insight-analytics'>Numberly Data Analyst Senior - Insight & Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -477,11 +481,6 @@ originations and servicing systems and data bases. The analyst will then be able
 <h5><a href='https://careers.jobscore.com/careers/sojern/jobs/data-analyst-travel-insights-asOMpeRwCr6BkHaKkRyNN8'>Data Analyst, Travel Insights #1071 job at Sojern in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/paylocity/0941e3eb-0208-4b97-bd51-ea1884125e2d/apply'>Paylocity - Data Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 16, 2019 ... U.S. Equal Employment Opportunity information (Completion is voluntary and will 
-not subject you to adverse treatment). Our company values diversity.</p>
 <hr/>
 
 
